--- a/index.html
+++ b/index.html
@@ -10,29 +10,27 @@ css: index
     <h2>Новини</h2>
     <ul class="news">
         <li>
-            <h3>Скоро се въвежда нова система за таксуване в градския транспорт в София</h3>
-            <p class="date">03.08.2019г.</p>
-            <p class="news-description">Хартиеното билетче ще бъде заменено от електронно, а превозните средства ще
-                се оборудват с камери. ,,2019-та е годината, в която очакваме новата система да е напълно завършена.
-                Тогава ще плащаме за време или брой спирки, а не както е сега – един билет за едно превозно
-                средство, а перфораторите отиват в музея на София – там, където им е мястото”, заяви Христиан
-                Петров,
-                изпълнителен директор на ЦГМ.</p>
+            <h3>Метролиния 3 от "Хаджи Димитър" до "Красно село" е почти готова</h3>
+            <p class="date">08.10.2019г.</p>
+            <p class="news-description">Πъpвaтa oтceчĸa oт тpeтия лъч нa мeтpoтo в Coфия, ĸoятo cвъpзвa ĸвapтaлитe
+                "Xaджи Димитъp" и "Kpacнo ceлo" e гoтoв нa 91% и пpeдcтoи дa бъдe oтĸpит пpeз eceнтa. Toй e c дължинa oт
+                8 ĸилoмeтpa и минaвa пpeз Opлoв мocт и HДK.</p>
         </li>
         <li>
-            <h3>Удължава се маршрутът на тролейбусна линия № 7 до ж.к. „Гоце Делчев“</h3>
-            <p class="date">13.07.2019г.</p>
-            <p class="news-description">Oт 13.07.2019 год. за срок от 6 месеца се удължава маршрутът на
-                тролейбусна линия № 7: ж.к. Люлин 3-УХО – Сточна гара – ж.к. „Гоце Делчев“. Тролейбусна линия №
-                7 ще спира на всички съществуващи спирки в удължения участък от маршрута.</p>
+            <h3>Автобусите, движещи се по бул. „Сливница“, вече ще спират на спирка „Ж.к. Банишора“</h3>
+            <p class="date">01.10.2019г.</p>
+            <p class="news-description">Считано от 01.10.2019 г. автобусите от линии № 11, 309 и 310 ще спират
+                двупосочно на спирка „Ж.к. Банишора“ на бул. „Сливница“, съществуваща за
+                тролейбусни линии № 6 и 7.</p>
         </li>
         <li>
-            <h3>София обновява градския транспорт с 82 електробуса, 30 тролея и 25 трамвая</h3>
-            <p class="date">11.07.2019г.</p>
-            <p class="news-description">Днес СОС одобри Столичната община да кандидатства по ОП "Околна среда
-                2014-2020 г." за доставка на нови електробуси, тролейбуси, трамваи и станции за зареждане.
-                Общият размер на средствата за директно предоставяне на безвъзмездна финансова помощ за София е
-                218 млн. лв.</p>
+            <h3>Линия 204 се поема от столичния автотранспорт с нови автобуси</h3>
+            <p class="date">15.09.2019г.</p>
+            <p class="news-description">От понеделник, 16 септември, линия 204 се поема от "Столичен
+                автотранспорт" ЕАД, съобщиха от Столична община. Тя ще се обслужва от нови автобуси, с двойно повече
+                места, спрямо сегашните, и ще бъдат от най-високия
+                екологичен клас. Те са част от третата партида от 60-те съчленени автобуса MAN, които общината доставя
+                през тази година.</p>
         </li>
     </ul>
     <p class="action">
@@ -42,19 +40,25 @@ css: index
 <section class="picofthemonth-section">
     <h2>Снимка на месеца</h2>
     <div class="container">
-        <img src="img/picjuly.jpg">
+        <img src="img/picoct.jpg">
         <div class="overlay">
-            <p class="text">Автобус Mercedes Intouro по линия 166 във Витоша</p>
+            <p class="text">Автобус MAN от новата доставка през 2019г. по линия 42 в ж.к. Люлин</p>
         </div>
     </div>
 </section>
 <section class="newinsite-section">
-    <h2>Какво ново има в сайта?</h2>
+    <h2 class="last-updates">Последни ъпдейти</h2>
+    <p class="last-update-date">от 08.10.2019г.</p>
     <ul>
-        <li>Добавена секция ,,Снимка на месеца"</li>
-        <li>Новините са обновени</li>
-        <li>Добавени нови анимации в сайта</li>
+        <li>Обновена е секция „Снимка на месеца“</li>
+        <li>Новините са актуализирани</li>
+        <li>Ъпдейтната е секция „Какво ново в сайта?“</li>
     </ul>
+    <h3>Нуждаем се от Вашата обратна връзка</h2>
+    <p>Ако има нещо, което не ви харесва
+        и искате да бъде променено. Ако
+        имате креативни идеи и искате да добавим нещо ново в сайта ни – не се бавете, а се свържете с нас на имейл:
+        valentinnn1@outlook.com! Нека заедно да направим сайта по-привлекателен!</p>
 </section>
 <section class="subscribe-section">
     <h2>Абониране за нашия бюлетин</h2>
